[gd_scene load_steps=25 format=2]

[ext_resource path="res://addons/godotFFMPEG/assets/volume-mute.svg" type="Texture" id=1]
[ext_resource path="res://addons/godotFFMPEG/assets/play.svg" type="Texture" id=2]
[ext_resource path="res://addons/godotFFMPEG/assets/pause.svg" type="Texture" id=3]
[ext_resource path="res://addons/godotFFMPEG/assets/arrow-square-left.svg" type="Texture" id=4]
[ext_resource path="res://addons/godotFFMPEG/assets/arrow-square-right.svg" type="Texture" id=5]
[ext_resource path="res://addons/godotFFMPEG/assets/arrows-fullscreen.svg" type="Texture" id=6]
[ext_resource path="res://addons/godotFFMPEG/assets/volume-up.svg" type="Texture" id=7]
[ext_resource path="res://addons/godotFFMPEG/videoStream/videoStream.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/godotFFMPEG/videoPlayer/highlightHoverModulate.gd" type="Script" id=9]
[ext_resource path="res://addons/godotFFMPEG/videoPlayer/videoPlayer.gd" type="Script" id=10]
[ext_resource path="res://addons/godotFFMPEG/videoPlayer/highlightHover.gd" type="Script" id=11]
[ext_resource path="res://addons/godotFFMPEG/assets/repeat.svg" type="Texture" id=12]

[sub_resource type="InputEventKey" id=1]
physical_scancode = 16777231

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventKey" id=5]
physical_scancode = 32

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="InputEventKey" id=3]
physical_scancode = 16777233

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="Animation" id=8]
resource_name = "fadeIn"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "fadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
resource_name = "fadeIn"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=10]
resource_name = "fadeOut"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=12]
resource_name = "fadeIn"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
resource_name = "fadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="videoPlayer" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="v" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Video" parent="v" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 552.0
size_flags_horizontal = 3
size_flags_vertical = 3
autoPlay = false
debug = true

[node name="v" type="VBoxContainer" parent="v"]
margin_top = 556.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="TimeBar" type="HSlider" parent="v/v"]
margin_right = 1024.0
margin_bottom = 16.0

[node name="h" type="HBoxContainer" parent="v/v"]
margin_top = 20.0
margin_right = 1024.0
margin_bottom = 44.0

[node name="Button" type="Button" parent="v/v/h"]
modulate = Color( 0.564706, 0.564706, 0.564706, 1 )
margin_right = 86.0
margin_bottom = 24.0
text = "Open File..."
flat = true
script = ExtResource( 9 )

[node name="Container" type="Container" parent="v/v/h"]
margin_left = 90.0
margin_right = 487.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BottomBar" type="HBoxContainer" parent="v/v/h"]
margin_left = 491.0
margin_right = 595.0
margin_bottom = 24.0

[node name="ButtonPreviousFrame" type="TextureButton" parent="v/v/h/BottomBar"]
margin_right = 24.0
margin_bottom = 24.0
shortcut = SubResource( 2 )
texture_normal = ExtResource( 4 )
script = ExtResource( 11 )

[node name="ButtonPlay" type="TextureButton" parent="v/v/h/BottomBar"]
margin_left = 28.0
margin_right = 48.0
margin_bottom = 24.0
rect_min_size = Vector2( 20, 20 )
hint_tooltip = "Play"
toggle_mode = true
shortcut = SubResource( 6 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
expand = true
script = ExtResource( 11 )

[node name="ButtonNextFrame" type="TextureButton" parent="v/v/h/BottomBar"]
margin_left = 52.0
margin_right = 76.0
margin_bottom = 24.0
hint_tooltip = "Next frame"
shortcut = SubResource( 4 )
texture_normal = ExtResource( 5 )
script = ExtResource( 11 )

[node name="LabelTime" type="Label" parent="v/v/h/BottomBar"]
margin_left = 80.0
margin_top = 5.0
margin_right = 80.0
margin_bottom = 19.0
valign = 1

[node name="ButtonAudio" type="TextureButton" parent="v/v/h/BottomBar"]
margin_left = 84.0
margin_right = 104.0
margin_bottom = 24.0
rect_min_size = Vector2( 20, 20 )
hint_tooltip = "Toogle Mute"
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 1 )
expand = true
script = ExtResource( 11 )

[node name="VSliderVolume" type="VSlider" parent="v/v/h/BottomBar/ButtonAudio"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.1
anchor_top = -5.75
anchor_right = 0.1
anchor_bottom = -0.875
margin_right = 16.0
margin_bottom = 16.0
min_value = -30.0
max_value = 0.0
exp_edit = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="v/v/h/BottomBar/ButtonAudio/VSliderVolume"]
anims/fadeIn = SubResource( 8 )
anims/fadeOut = SubResource( 7 )

[node name="Container2" type="Container" parent="v/v/h"]
margin_left = 599.0
margin_right = 996.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonRepeat" type="TextureButton" parent="v/v/h"]
margin_left = 1000.0
margin_right = 1024.0
margin_bottom = 24.0
toggle_mode = true
texture_normal = ExtResource( 12 )
script = ExtResource( 11 )
makeDarkToggleTexture = true

[node name="ButtonFullscreen" type="TextureButton" parent="v/v/h"]
visible = false
margin_left = 1004.0
margin_right = 1024.0
margin_bottom = 24.0
rect_min_size = Vector2( 20, 0 )
hint_tooltip = "Fullscreen"
texture_normal = ExtResource( 6 )
expand = true
script = ExtResource( 11 )

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
window_title = "Open a File"
mode = 0
access = 2
show_hidden_files = true

[node name="LabelTime" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.9
anchor_right = 0.000976563
anchor_bottom = 0.9
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="LabelTime"]
anims/fadeIn = SubResource( 9 )
anims/fadeOut = SubResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fadeIn = SubResource( 12 )
anims/fadeOut = SubResource( 11 )

[connection signal="gui_input" from="v/Video" to="." method="_on_Video_gui_input"]
[connection signal="gui_input" from="v/v" to="." method="_on_v_gui_input"]
[connection signal="mouse_entered" from="v/v" to="." method="_on_v_mouse_entered"]
[connection signal="mouse_exited" from="v/v" to="." method="_on_v_mouse_exited"]
[connection signal="gui_input" from="v/v/TimeBar" to="." method="_on_TimeBar_gui_input"]
[connection signal="mouse_entered" from="v/v/TimeBar" to="." method="_on_TimeBar_mouse_entered"]
[connection signal="mouse_exited" from="v/v/TimeBar" to="." method="_on_TimeBar_mouse_exited"]
[connection signal="pressed" from="v/v/h/Button" to="FileDialog" method="popup_centered_ratio"]
[connection signal="pressed" from="v/v/h/BottomBar/ButtonPreviousFrame" to="." method="_on_ButtonPreviousFrame_pressed"]
[connection signal="pressed" from="v/v/h/BottomBar/ButtonPlay" to="." method="_on_ButtonPlay_pressed"]
[connection signal="pressed" from="v/v/h/BottomBar/ButtonNextFrame" to="." method="_on_ButtonNextFrame_pressed"]
[connection signal="gui_input" from="v/v/h/BottomBar/ButtonAudio" to="." method="_on_ButtonAudio_gui_input"]
[connection signal="mouse_entered" from="v/v/h/BottomBar/ButtonAudio" to="." method="_on_ButtonAudio_mouse_entered"]
[connection signal="mouse_exited" from="v/v/h/BottomBar/ButtonAudio" to="." method="_on_ButtonAudio_mouse_exited"]
[connection signal="toggled" from="v/v/h/BottomBar/ButtonAudio" to="." method="_on_ButtonAudio_toggled"]
[connection signal="mouse_entered" from="v/v/h/BottomBar/ButtonAudio/VSliderVolume" to="." method="_on_VSliderVolume_mouse_entered"]
[connection signal="mouse_exited" from="v/v/h/BottomBar/ButtonAudio/VSliderVolume" to="." method="_on_VSliderVolume_mouse_exited"]
[connection signal="value_changed" from="v/v/h/BottomBar/ButtonAudio/VSliderVolume" to="." method="_on_VSliderVolume_value_changed"]
[connection signal="toggled" from="v/v/h/ButtonRepeat" to="." method="_on_ButtonRepeat_toggled"]
[connection signal="pressed" from="v/v/h/ButtonFullscreen" to="." method="_on_ButtonFullscreen_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
